# autogen

./: .env  agentic.py  agents.json  agents.py  config.py  functions.py  main.py  main_old.py  pyproject.toml  tools.py  tools_execution_test.py  websocket_handler.py
.cache/41/: cache.db
.cache/42/: cache.db
.cache/47/: cache.db
coding/: plot_stock_prices.py
old/: OAI_CONFIG_LIST.json  agents.json  agents.py  functions.py  main.py  main_old.py  websocket_handler.py
old/prompts/: VENDA_PERF.jinja  agency_researcher.jinja  joker_agent.jinja  output_agent.jinja  purcharse_agent.jinja  supervisor_agent.jinja  user_proxy.jinja  venda_with_sql.jinja  vendas_without_sql.jinja
prompts/: agency_researcher.jinja  booking_agent.jinja
src/: app.py  config.py  main.py
src/agents/: ai_agent.py  human_agent.py  responses.py  user_agent.py  user_agent_socket.py
src/agents/ai_agents/: adminstrator_agent.py  cadastro_agent.py  cancellation_agent.py  issu_repair_agent.py  sales_agent.py  triage_agent.py
src/agents/human/: agent.py
src/agents/user/: agent.py
src/common/: websockt_manager.py
src/tools/: custom_tools.py  delegate_tools.py
src/utils/: retry_helpers.py  topics.py
templates/: index.html
