[tool.poetry]
name = "autogen"
version = "0.1.0"
description = ""
authors = ["Joao Paulo <jpaulo_silva2005@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.9"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
